# window-getter-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: get_window.rs  macos_permission.rs  macos_window_info.rs  print_windows.rs  windows_various_rect.rs
src/: bounds.rs  error.rs  lib.rs  window.rs  window_id.rs
src/platform_impl/: macos.rs  mod.rs  windows.rs
