[package]
name = "window-getter"
description = "The library for retrieving information about the windows."
version = "0.1.0"
edition = "2024"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tasuren/window-getter-rs"
keywords = ["window", "enum", "window-enum", "windows", "macos"]
categories = ["os::windows-apis", "os::macos-apis"]

[dependencies]
thiserror = "2.0.12"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.1"
default-features = false
features = ["CFNumber", "CFString", "CFDictionary"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
version = "0.3.1"
default-features = false
features = ["CGGeometry", "CGWindow"]
