[package]
name = "window-getter"
description = "The library for retrieving information about the windows."
version = "0.1.1"
edition = "2024"
authors = ["Takagi Tasuku <tasuren@outlook.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tasuren/window-getter-rs"
keywords = ["window", "enum", "window-enum", "windows", "macos"]
categories = ["os::windows-apis", "os::macos-apis"]

[dependencies]
thiserror = "2.0.16"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
version = "0.3.1"
default-features = false
features = ["CFNumber", "CFString", "CFDictionary"]

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-graphics]
version = "0.3.1"
default-features = false
features = ["CGGeometry", "CGWindow"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
